📏 fix scroll X + wave rotate on safari

--- a/src/scenes/Projects.module.css
+++ b/src/scenes/Projects.module.css
@@ -1,7 +1,6 @@
 #projects {
   width: 100vw;
   position: relative;
-  overflow-y: hidden;
 }
 
 #container {
